<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_anchorGravity="center"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tl_contenedor"
        android:layout_width="wrap_content"
        android:layout_height="664dp"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="30dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="10dp">

        <TableRow
            android:id="@+id/fila1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border"
            android:foregroundGravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp"
            android:paddingTop="50dp"
            android:paddingBottom="50dp">

            <LinearLayout
                android:id="@+id/linlay_v"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4"
                android:baselineAligned="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_historial"
                    android:layout_width="367dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/tv_historial"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/tv_resultado"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/fila2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#0071D4"
                android:onClick="allClean"
                android:padding="5dp"
                android:text="@string/btn_ac"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#00BCD4"
                android:onClick="clean"
                android:padding="5dp"
                android:text="@string/btn_c"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#F44336"
                android:onClick="off"
                android:padding="5dp"
                android:text="@string/btn_off"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_suma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="suma"
                android:padding="5dp"
                android:text="@string/btn_suma"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/fila3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="btn1"
            android:padding="5dp">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn1"
                android:padding="5dp"
                android:text="@string/btn_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn2"
                android:padding="5dp"
                android:text="@string/btn_2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn3"
                android:padding="5dp"
                android:text="@string/btn_3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_resta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="resta"
                android:padding="5dp"
                android:text="@string/btn_resta"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/fila4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn4"
                android:padding="5dp"
                android:text="@string/btn_4"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn5"
                android:padding="5dp"
                android:text="@string/btn_5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn6"
                android:padding="5dp"
                android:text="@string/btn_6"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_mult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="mult"
                android:padding="5dp"
                android:text="@string/btn_mult"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/fila5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn7"
                android:padding="5dp"
                android:text="@string/btn_7"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn8"
                android:padding="5dp"
                android:text="@string/btn_8"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn9"
                android:padding="5dp"
                android:text="@string/btn_9"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="div"
                android:padding="5dp"
                android:text="@string/btn_div"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/fila6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn0"
                android:padding="5dp"
                android:text="@string/btn_0"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_simbolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_simbolo"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_pto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="btn_pto"
                android:padding="5dp"
                android:text="@string/btn_pto"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_porcen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="porcentaje"
                android:text="@string/btn_porcentaje"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/fila7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_igual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_span="4"
                android:onClick="igual"
                android:padding="5dp"
                android:text="@string/btn_igual"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>